--- a/leaderboard.html
+++ b/leaderboard.html
@@ -60,10 +60,16 @@
             </div>
         </div>
 
-        <h2>Instructions to come</h2>
+        <div class="container" align="justify">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 thumb">
+                    <h2>Instructions to submit to leaderboard are coming soon!</h2>
+                </div>
+            </div>
+        </div>
 
         <br/>
-
+<!-- 
         <div class="container" align="justify">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 thumb">
@@ -97,7 +103,7 @@
 
             <p>[How to submit here]</p>
 
-        </div>
+        </div> -->
 
         <br>
 
