--- a/download.html
+++ b/download.html
@@ -86,7 +86,7 @@
                     <li><b>To install TLiDB with pip (recommended for recreating baselines):</b> 
                         <br>                        
                         Install TLiDB with pip: <pre><code>pip install tlidb</code></pre>
-                        Then models can quickly be trained directly from the command line such as:<pre><code>tlidb --source_datasets Friends --source_tasks emory_emotion_recognition --target_datasets Friends --target_tasks reading_comprehension --do_train --do_finetune --do_eval --eval_best --model_config=bert</code></pre>
+                        Then models can quickly be trained directly from the command line such as:<pre><code>tlidb --source_datasets Friends --source_tasks emory_emotion_recognition --target_datasets Friends --target_tasks reading_comprehension --do_train --do_finetune --do_eval --eval_best --model_config bert --few_shot_percent 0.1</code></pre>
                     </li>
                     <li>
                         <b>To utilize the TLiDB dataloader (recommended for use with your own models and training script):</b>
