update index with awards

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                     The mission of the FETA challenge is to encourage the development and evaluation of new approaches to task-transfer with limited in-domain data.
                     Specifically, FETA focuses on the dialogue domain due to interests in empowering human-machine communication through natural language.
                     <br>
+                    <b>Awards</b>
+                    <br>
+                    The FETA challenge will award prizes for highest scores, as well as for innovative approaches. Exact awards are to be determined.
+                    <br>
                     For more details on the FETA challenge, see <a href="https://github.com/alon-albalak/TLiDB/blob/master/FETA_README.md">here</a>.
                 </div>
             </div>
@@ -198,7 +202,6 @@
     pages = "10936--10953",
     abstract = "Task transfer, transferring knowledge contained in related tasks, holds the promise of reducing the quantity of labeled data required to fine-tune language models. Dialogue understanding encompasses many diverse tasks, yet task transfer has not been thoroughly studied in conversational AI. This work explores conversational task transfer by introducing FETA: a benchmark for FEw-sample TAsk transfer in open-domain dialogue.FETA contains two underlying sets of conversations upon which there are 10 and 7 tasks annotated, enabling the study of intra-dataset task transfer; task transfer without domain adaptation. We utilize three popular language models and three learning algorithms to analyze the transferability between 132 source-target task pairs and create a baseline for future work.We run experiments in the single- and multi-source settings and report valuable findings, e.g., most performance trends are model-specific, and span extraction and multiple-choice tasks benefit the most from task transfer.In addition to task transfer, FETA can be a valuable resource for future research into the efficiency and generalizability of pre-training datasets and model architectures, as well as for learning settings such as continual and multitask learning.",
 }
-                            
                         </code></pre>
                     </details>
                 </div>
