--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/alon-albalak/TLiDB/blob/master/FETA_README.md#sample-code">Starter Code</a>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://arxiv.org/abs/2205.06262" target="_blank">Paper</a>
+                            <a class="nav-link" href="https://aclanthology.org/2022.emnlp-main.751/" target="_blank">Paper</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mailto:feta.benchmark@gmail.com">Contact</a>
