--- a/download.html
+++ b/download.html
@@ -13,7 +13,7 @@
         <meta charset="utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>FETA</title>
+        <title>FETA - Download</title>
         <meta name="description" content="FETA is a benchmark for Few-Shot Task Transfer in Open-Domain Dialogue.">
         <meta name="keywords" content="Few shot,Task Transfer,Dialogue,Chit Chat, Open Domain Dialogue">
         <meta name="author" content="FETA">
