--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="mailto:feta.benchmark@gmail.com">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="friends_codalab.html">Friends Leaderboard</a>
+                        </li>
                     </ul>
                 </div>
             </div>
