add competition dates to index

--- a/index.html
+++ b/index.html
@@ -164,9 +164,19 @@
                     The mission of the FETA challenge is to encourage the development and evaluation of new approaches to task-transfer with limited in-domain data.
                     Specifically, FETA focuses on the dialogue domain due to interests in empowering human-machine communication through natural language.
                     <br>
+                    <b>Important Dates</b>
+                    <br>
+                    <ul>
+                        <li>Competition Start: <b>February 15th, 2023</b></li>
+                        <li>Competition End: <b>July 1st 2023 AoE</b>  (Codalab submissions deadline)</li>
+                        <li>Paper Submission Deadline: <b>July 8th 2023 AoE</b></li>
+                        <li>Awards and Prizes Announced: <b>July 14th, 2023</b></li>
+                    </ul>
                     <b>Awards</b>
                     <br>
                     The FETA challenge will award prizes for highest scores, as well as for innovative approaches. Exact awards are to be determined.
+                    <br>
+                    <b>Challenge Details</b>
                     <br>
                     For more details on the FETA challenge, see <a href="https://github.com/alon-albalak/TLiDB/blob/master/FETA_README.md">here</a>.
                 </div>
